--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon backend/server.js",
+    "start": "node backend/server.js",
+    "server": "nodemon backend/server.js",
     "build": "npm install && npm install --prefix frontEnd && npm run build --prefix frontEnd"
   },
   "author": "channaveer",
